# nmpde-projects

./: .gitignore  CMakeLists.txt  find_libs.cmake
src/cpp/: main.cpp
src/cpp/solver/: boundaries.hpp  complete_solver.cpp  complete_solver.hpp  derivatives.hpp  mesh_geometry.hpp  orthotropic_solver.cpp  orthotropic_solver.hpp  prototype.cpp  prototype.hpp  rebuild.cpp  rebuild.hpp  superelastic_isotropic.cpp  superelastic_isotropic.hpp
src/cpp/solver/BarbarotaAD/: Barbarotta.cpp  Barbarotta.hpp  BoundariesBarbarotta.hpp  Second_Land_Barbarotta.cpp
src/cpp/solver/GuccioneAD/: BoundariesHeartGuccione.hpp  First_Land_Guccione.cpp  GuccioneSolver.cpp  GuccioneSolver.hpp  HeartActiveGuccione.cpp  HeartActiveGuccione.hpp  HeartGuccioneSolver.cpp  HeartGuccioneSolver.hpp  Second_Land_Guccione.cpp  Third_Land_Guccione.cpp
src/cpp/solver/NeoHookeAD/: BoundariesGuccione.hpp  First_Land_NeoHooke.cpp  NeoHookeFibres.cpp  NeoHookeFibres.hpp  NeoHookeFirstLand.cpp  NeoHookeFirstLand.hpp  NeoHookeHeart.cpp  NeoHookeHeart.hpp  Second_Land_NeoHooke.cpp  Third_Land_NeoHooke.cpp
src/cpp/utilities/: math.hpp  mesh_io.cpp  mesh_io.hpp  refine.hpp  table_io.hpp  visualize.hpp
src/cpp/vectorize/: matrix_op.cpp
src/gmesh/: True_volume.geo  barbarotta.geo  clean_heart_cup.geo  coarse_heart_land.geo  fine_land.geo  heart_cup.geo  heart_cup.msh  mesh.geo  ms.geo  ms2.geo  new.geometry.geo
